--- a/02_神经网络的学习.md
+++ b/02_神经网络的学习.md
@@ -505,8 +505,13 @@ grad[0,0] = (loss1 - loss2) / (2h) = (1.3058 - 1.3062) / 0.0002 = -0.02
 | 随机梯度下降（SGD） | 使用单个样本计算梯度 | 快但不稳定 |
 | 小批量梯度下降（Mini-batch） | 使用一小批数据 | 平衡稳定性和速度 |
 
-**代码实现**：
+**代码实现**（来自 `ch03_train/3_gradient_descent.py`）：
 ```python
+import numpy as np
+from common.gradient import numerical_gradient
+import matplotlib.pyplot as plt
+
+# 定义梯度下降法的函数
 def gradient_descent(f, init_x, lr=0.01, step_num=100):
     """
     梯度下降法求函数最小值
@@ -514,62 +519,106 @@ def gradient_descent(f, init_x, lr=0.01, step_num=100):
     参数:
         f: 目标函数（要最小化的函数）
         init_x: 初始参数值
-        lr: 学习率（learning rate）
+        lr: 学习率
         step_num: 迭代次数
     
     返回:
         x: 优化后的参数值
+        x_history: 优化过程中的历史点
     """
-    x = init_x.copy()  # 复制初始值，避免修改原数组
+    x = init_x
+    x_history = []  # 记录优化过程
     
     for i in range(step_num):
-        # 计算当前点的梯度
-        grad = numerical_gradient_1d(f, x)
-        # 沿负梯度方向更新参数
-        x = x - lr * grad
+        x_history.append(x.copy())
+        grad = numerical_gradient(f, x)  # 计算梯度
+        x -= lr * grad  # 沿负梯度方向更新
     
-    return x
+    return x, np.array(x_history)
 
-# 示例：求 f(x₀, x₁) = x₀² + x₁² 的最小值点
-init_x = np.array([-3.0, 4.0])
-result = gradient_descent(function_2, init_x, lr=0.1, step_num=100)
-print(result)  # 输出接近 [0, 0]
+# 定义目标函数 f(x) = x₀² + x₁²
+def f(x):
+    return x[0]**2 + x[1]**2
+
+if __name__ == '__main__':
+    # 定义初始值
+    init_x = np.array([-3.0, 4.0])
+    # 定义超参数
+    lr = 0.9
+    num_iter = 2000
+    
+    # 梯度下降法
+    x, x_history = gradient_descent(f, init_x, lr=lr, step_num=num_iter)
+    print("最小值点", x)
+    
+    # 画图：显示优化过程
+    plt.plot([-5,5],[0,0],'--b')  # x轴
+    plt.plot([0,0],[-5,5],'--b')  # y轴
+    plt.plot(x_history[:, 0], x_history[:, 1], "o")  # 优化路径
+    plt.xlim([-3.5,3.5])
+    plt.ylim([-4.5,4.5])
+    plt.xlabel("x0")
+    plt.ylabel("x1")
+    plt.show()
 ```
 
 **代码说明**：
 - 每次迭代计算梯度，然后沿负梯度方向更新参数
-- 学习率 lr 控制每步移动的大小
-- 复制初始值是为了不修改传入的原始数组
+- 学习率 lr=0.9 控制每步移动的大小
+- `x_history` 记录优化过程，可用于可视化
+- 最终收敛到最小值点 (0, 0) 附近
 
 ### 2.4.2 模型训练相关概念
 
-#### Epoch（轮次）
+在神经网络训练中，三个核心概念是 Epoch、Batch Size 和 Iteration。理解它们之间的关系对于设置训练参数至关重要。
 
-一个 epoch 表示所有训练数据被完整使用一次。
+#### 1）Epoch（轮次）
+
+**定义**：1 个 Epoch 表示模型完整遍历了一次整个训练数据集的过程。
+
+**示例**：训练 10 个 Epoch 表示模型将整个数据集反复学习 10 次。
 
 ```
 训练过程：Epoch 1 → Epoch 2 → ... → Epoch N
 ```
 
-#### Batch Size（批量大小）
+**重要说明**：
+- 模型需要多次遍历数据集（多个 Epoch）才能逐步学习数据中的模式
+- 单次遍历数据集（1 个 Epoch）通常不足以让模型收敛
+- 多次遍历可以逐步优化模型参数
 
-每次更新参数时使用的样本数量。
+#### 2）Batch Size（批量大小）
+
+**定义**：Batch Size 是每次训练时输入的样本数量。
+
+**示例**：Batch Size=32 表示每次用 32 个样本计算一次梯度并更新模型参数。
 
 **选择建议**：
-- 常用值：32, 64, 128, 256
-- 内存限制：根据GPU显存调整
-- 收敛性：较大的batch更稳定，较小的batch噪声更大但可能找到更好的解
+- **小批量**：数据集计算梯度比直样本（Batch Size=1）更稳定
+- **大批量**：比全批量（Batch Size=全体数据）更高效
+- **常用值**：32, 64, 128, 256
+- **内存限制**：根据GPU显存调整
+- **收敛性**：较小的 Batch Size 可能来带更多噪声，有助于模型泛化
 
-#### Iteration（迭代次数）
+#### 3）Iteration（迭代次数）
 
+**定义**：一次 Iteration 表示完成一个 Batch 数据的正向传播（预测）和反向传播（更新参数）的过程。
+
+**计算公式**：
 ```
 迭代次数 = 训练样本数 / Batch Size
 ```
 
 **示例**：
-- 训练集：10000个样本
-- Batch Size：100
-- 每个Epoch的迭代次数：10000 / 100 = 100次
+- 数据集现有 2000 个样本，对其训练 10 个 Epoch，选择 Batch Size=64：
+  - **每个 Epoch 的迭代次数** = 2000 / 64 ≈ 32 次
+  - **总迭代次数** = 32 × 10 = 320 次
+
+**三者关系总结**：
+```
+1 个 Epoch = (训练样本数 / Batch Size) 个 Iteration
+总 Iteration 数 = Epoch 数 × (训练样本数 / Batch Size)
+```
 
 #### 学习率（Learning Rate）
 
@@ -674,9 +723,12 @@ optimizer.update(network.params, grads)  # 一次参数更新
 
 ### 完整实现
 
+#### TwoLayerNet 类（来自 `ch03_train/two_layer_net.py`）
+
 ```python
 import numpy as np
 from common.functions import sigmoid, softmax, cross_entropy
+from common.gradient import numerical_gradient
 
 class TwoLayerNet:
     """
@@ -696,79 +748,157 @@ class TwoLayerNet:
             output_size: 输出层大小（类别数）
             weight_init_std: 权重初始化标准差
         """
-        # 参数字典：存储网络所有可训练参数
         self.params = {}
-        
-        # 输入层 → 隐藏层
         self.params['W1'] = weight_init_std * np.random.randn(input_size, hidden_size)
-        self.params['b1'] = np.zeros(hidden_size)
-        
-        # 隐藏层 → 输出层
         self.params['W2'] = weight_init_std * np.random.randn(hidden_size, output_size)
-        self.params['b2'] = np.zeros(output_size)
-    
-    def predict(self, x):
-        """
-        前向传播：根据输入计算预测输出
-        
-        参数:
-            x: 输入数据，形状 (batch_size, input_size)
-        
-        返回:
-            y: 预测概率分布，形状 (batch_size, output_size)
-        """
+        self.params['b1'] = np.zeros((1, hidden_size))
+        self.params['b2'] = np.zeros((1, output_size))
+
+    # 前向传播
+    # x @ W1 等价于 np.dot(x, W1)，是Python 3.5+的矩阵乘法运算符
+    def forward(self, x):
         W1, W2 = self.params['W1'], self.params['W2']
         b1, b2 = self.params['b1'], self.params['b2']
-        
-        # 第一层：输入层 → 隐藏层
-        a1 = np.dot(x, W1) + b1  # 加权和
-        z1 = sigmoid(a1)         # 激活
-        
-        # 第二层：隐藏层 → 输出层
-        a2 = np.dot(z1, W2) + b2  # 加权和
-        y = softmax(a2)           # Softmax激活，输出概率
-        
+        a1 = x @ W1 + b1       # (batch, 784) @ (784, 50) -> (batch, 50)
+        z1 = sigmoid(a1)
+        a2 = z1 @ W2 + b2      # (batch, 50) @ (50, 10) -> (batch, 10)
+        y = softmax(a2) 
         return y
-    
+
+    # 计算损失
     def loss(self, x, t):
-        """
-        计算损失函数值
-        
-        参数:
-            x: 输入数据
-            t: 真实标签（one-hot 或类别索引）
-        
-        返回:
-            交叉熵损失值
-        """
-        y = self.predict(x)
-        return cross_entropy(y, t)
-    
+        y = self.forward(x)
+        loss = cross_entropy(y, t)
+        return loss
+
+    # 计算准确度
     def accuracy(self, x, t):
-        """
-        计算分类准确率
-        
-        参数:
-            x: 输入数据
-            t: 真实标签
-        
-        返回:
-            准确率 (正确数 / 总数)
-        """
-        y = self.predict(x)
-        y = np.argmax(y, axis=1)  # 预测类别
-        if t.ndim != 1:
-            t = np.argmax(t, axis=1)  # 将 one-hot 转为类别索引
-        
-        return np.sum(y == t) / float(x.shape[0])
-    
+        y = self.forward(x)
+        # 根据最大概率得到分类号
+        y = np.argmax(y, axis=1)
+        # 与正确的标签对比，获得准确率
+        accuracy = np.sum(y==t) / x.shape[0]
+        return accuracy
+
+    # 计算梯度
+    # 注意：lambda 参数名用 _ 而非 x，避免覆盖外部输入数据 x
+    # numerical_gradient 会直接修改 self.params 中的值来计算数值梯度
     def numerical_gradient(self, x, t):
-        """
-        计算所有参数的梯度（数值微分法）
-        
-        参数:
-            x: 输入数据
-            t: 真实标签
+        loss_f = lambda _: self.loss(x, t)  # _ 是占位符，实际用的是被扰动的 self.params
+        grads = {}
+        grads['W1'] = numerical_gradient(loss_f, self.params['W1'])
+        grads['W2'] = numerical_gradient(loss_f, self.params['W2'])
+        grads['b1'] = numerical_gradient(loss_f, self.params['b1'])
+        grads['b2'] = numerical_gradient(loss_f, self.params['b2'])
+        return grads
+```
+
+**代码说明**：
+- **参数存储**：使用字典 `params` 统一管理权重和偏置
+- **前向传播**：`forward` 方法使用 `@` 运算符进行矩阵乘法
+- **梯度计算**：`numerical_gradient` 计算所有参数的梯度
+- **注意事项**：lambda 中用 `_` 作占位符，避免变量名冲突 
+
+#### 数据加载模块（来自 `common/load_data.py`）
+
+```python
+import numpy as np
+import pandas as pd
+from sklearn.model_selection import train_test_split
+from sklearn.preprocessing import MinMaxScaler
+
+def get_data():
+    """
+    加载并预处理手写数字数据集
+    
+    返回:
+        x_train, y_train, x_test, y_test
+    """
+    # 1. 从文件加载数据集
+    data = pd.read_csv("../data/train.csv")
+    # 2. 划分数据集
+    X = data.drop(labels="label", axis=1)
+    y = data["label"]
+    x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)
+    # 3. 特征工程: 归一化
+    scaler = MinMaxScaler()
+    x_train = scaler.fit_transform(x_train)
+    x_test = scaler.transform(x_test)
+    # 4. 数据转换为ndarray
+    y_train = y_train.values
+    y_test = y_test.values
+    return x_train, y_train, x_test, y_test
+```
+
+#### 完整训练代码（来自 `ch03_train/4_digit_recognizer_nn_train.py`）
+
+```python
+imp44ort pandas as pd
+from common.load_data import get_data
+from two_layer_net import TwoLayerNet
+
+# 1. 加载数据
+x_train, y_train, x_test, y_test = get_data()
+
+# 2. 初始化模型
+model = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)
+
+# 3. 设置超参数
+learning_rate = 0.1
+num_epochs = 10
+batch_size = 100
+train_size = x_train.shape[0]
+iter_per_epoch = train_size // batch_size
+iter_num = num_epochs * iter_per_epoch
+
+train_loss_list = []
+train_acc_list = []
+test_acc_list = []
+
+# 4. 循环迭代，用梯度下降法训练模型
+for i in range(iter_num):
+    # 4.1 随机选取批量数据
+    batch_mask = np.random.choice(train_size, batch_size)
+    x_batch = x_train[batch_mask]
+    t_batch = y_train[batch_mask]
+    
+    # 4.2 计算梯度
+    grad = model.numerical_gradient(x_batch, t_batch)
+    
+    # 4.3 更新参数
+    for key in ('W1', 'W2', 'b1', 'b2'):
+        model.params[key] -= learning_rate * grad[key]
+    
+    # 4.4 保存当前训练损失
+    train_loss_list.append(model.loss(x_batch, t_batch))
+    
+    # 4.5 每个epoch结束时计算准确度
+    if i % iter_per_epoch == 0:
+        train_acc = model.accuracy(x_train, y_train)
+        test_acc = model.accuracy(x_test, y_test)
+        print("train acc, test acc | " + str(train_acc) + ", " + str(test_acc))
+        train_acc_list.append(train_acc)
+        test_acc_list.append(test_acc)
+
+# 5. 画图
+import matplotlib.pyplot as plt
+x = np.arange(len(train_acc_list))
+plt.plot(x, train_acc_list, label='train acc')
+plt.plot(x, test_acc_list, label='test acc')
+plt.legend(loc='best')
+plt.show()
+```
+
+**代码说明**：
+1. **数据加载**：使用 `get_data()` 加载并预处理数据
+2. **模型初始化**：784(输入) → 50(隐藏) → 10(输出)
+3. **超参数设置**：学习率=0.1，10个Epoch，Batch=100
+4. **训练循环**：
+   - 随机抽取mini-batch
+   - 计算梯度
+   - SGD更新参数
+   - 记录损失和准确率
+5. **可视化**：绘制训练和测试准确率曲线
         
         返回:
             梯度字典，与 params 结构相同
