feat(training): 添加两层神经网络训练完整代码示例
- 新增手写数字识别模型训练脚本，涵盖数据加载、模型初始化
- 实现基于梯度的参数更新，包括权重和偏置的迭代优化
- 设定训练超参数，支持批次训练和多轮Epoch迭代
- 记录并打印训练和测试准确率，便于效果跟踪
- 使用Matplotlib绘制训练与测试准确率曲线，直观展示模型表现

--- a/02_神经网络的学习.md
+++ b/02_神经网络的学习.md
@@ -1,4 +1,27 @@
-# 第 2 章 神经网络的学习
+# 第2章 神经网络的学习
+
+## 本章导读
+
+第1章介绍了神经网络的基本结构和前向传播过程。但仅有网络结构是不够的，我们还需要让网络“学习”——即从数据中自动调整参数，使得预测越来越准确。
+
+**学习目标**：
+- 理解损失函数的作用和选择方法
+- 掌握数值微分和梯度计算的原理
+- 理解梯度下降法的工作原理
+- 能够实现完整的神经网络训练流程
+
+**学习路线**：
+```
+损失函数 → 数值微分 → 梯度计算 → 梯度下降 → 完整训练
+(衡量误差)  (求导方法)  (梯度矩阵)  (参数更新)  (实战应用)
+```
+
+**核心问题**：
+- 如何衡量模型的好坏？→ 损失函数
+- 如何找到最优参数？→ 梯度下降
+- 如何高效计算梯度？→ 数值微分/反向传播
+
+---
 
 ## 2.1 损失函数
 
@@ -163,11 +186,29 @@ Smooth L1 =
 
 #### 导数的定义
 
+在进入数值微分之前，我们需要理解导数的本质。
+
+**数学定义**：
 导数表示函数在某一点的瞬时变化率：
 
 ```
 f'(x) = lim[h→0] (f(x+h) - f(x)) / h
 ```
+
+**直观理解**：
+- **几何意义**：曲线在该点的切线斜率
+- **物理意义**：描述了“变化率”——x 的微小变化引起 f(x) 的变化程度
+
+**导数的含义**：
+- **导数为正**：函数递增，增大 x 会增大 f(x)
+- **导数为负**：函数递减，增大 x 会减小 f(x)
+- **导数绝对值大**：变化快，x 的微小变化导致 f(x) 的大幅变化
+
+**在神经网络中的意义**：
+- 导数告诉我们“参数如何影响损失函数”
+- 正导数：减小该参数可以降低损失
+- 负导数：增大该参数可以降低损失
+- 这就是梯度下降法的数学基础
 
 #### 数值微分
 
@@ -594,11 +635,11 @@ if __name__ == '__main__':
 **示例**：Batch Size=32 表示每次用 32 个样本计算一次梯度并更新模型参数。
 
 **选择建议**：
-- **小批量**：数据集计算梯度比直样本（Batch Size=1）更稳定
+- **小批量**：小批量数据计算梯度比单样本（Batch Size=1）更稳定
 - **大批量**：比全批量（Batch Size=全体数据）更高效
 - **常用值**：32, 64, 128, 256
 - **内存限制**：根据GPU显存调整
-- **收敛性**：较小的 Batch Size 可能来带更多噪声，有助于模型泛化
+- **收敛性**：较小的 Batch Size 可能带来更多噪声，有助于模型泛化
 
 #### 3）Iteration（迭代次数）
 
@@ -833,7 +874,7 @@ def get_data():
 #### 完整训练代码（来自 `ch03_train/4_digit_recognizer_nn_train.py`）
 
 ```python
-imp44ort pandas as pd
+import pandas as pd
 from common.load_data import get_data
 from two_layer_net import TwoLayerNet
 
@@ -899,93 +940,6 @@ plt.show()
    - SGD更新参数
    - 记录损失和准确率
 5. **可视化**：绘制训练和测试准确率曲线
-        
-        返回:
-            梯度字典，与 params 结构相同
-        """
-        loss_W = lambda W: self.loss(x, t)  # 损失函数
-        
-        grads = {}
-        grads['W1'] = numerical_gradient(loss_W, self.params['W1'])
-        grads['b1'] = numerical_gradient(loss_W, self.params['b1'])
-        grads['W2'] = numerical_gradient(loss_W, self.params['W2'])
-        grads['b2'] = numerical_gradient(loss_W, self.params['b2'])
-        
-        return grads
-
-# ==================== 训练主流程 ====================
-if __name__ == "__main__":
-    # 1. 准备数据（示例：简化的手写数字数据）
-    from sklearn.datasets import load_digits
-    from sklearn.model_selection import train_test_split
-    
-    digits = load_digits()
-    X = digits.data / 16.0  # 归一化到 [0, 1]
-    y = digits.target
-    
-    # 划分训练集和测试集
-    x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2)
-    
-    # 2. 初始化网络
-    network = TwoLayerNet(input_size=64, hidden_size=50, output_size=10)
-    
-    # 3. 设置超参数
-    iters_num = 1000     # 迭代次数
-    batch_size = 100      # 批次大小
-    learning_rate = 0.1   # 学习率
-    
-    train_size = x_train.shape[0]
-    train_loss_list = []   # 记录损失变化
-    train_acc_list = []    # 记录训练准确率
-    test_acc_list = []     # 记录测试准确率
-    
-    # 4. 训练循环
-    for i in range(iters_num):
-        # (a) 随机抽取 mini-batch
-        batch_mask = np.random.choice(train_size, batch_size)
-        x_batch = x_train[batch_mask]
-        t_batch = y_train[batch_mask]
-        
-        # (b) 计算梯度
-        grad = network.numerical_gradient(x_batch, t_batch)
-        
-        # (c) 更新参数 (SGD)
-        for key in ('W1', 'b1', 'W2', 'b2'):
-            network.params[key] -= learning_rate * grad[key]
-        
-        # (d) 记录损失
-        loss = network.loss(x_batch, t_batch)
-        train_loss_list.append(loss)
-        
-        # 每 100 次迭代打印一次进度
-        if i % 100 == 0:
-            train_acc = network.accuracy(x_train, y_train)
-            test_acc = network.accuracy(x_test, y_test)
-            train_acc_list.append(train_acc)
-            test_acc_list.append(test_acc)
-            print(f"iter {i:4d} | loss: {loss:.4f} | train_acc: {train_acc:.4f} | test_acc: {test_acc:.4f}")
-    
-    print(f"\n训练完成！最终测试准确率: {network.accuracy(x_test, y_test):.4f}")
-```
-
-**代码说明**：
-
-1. **网络类结构**：
-   - `__init__`: 初始化权重和偏置，使用正态分布随机初始化
-   - `predict`: 前向传播，计算预测结果
-   - `loss`: 计算交叉熵损失
-   - `accuracy`: 计算分类准确率
-   - `numerical_gradient`: 计算所有参数的梯度
-
-2. **训练流程**：
-   - 随机抽取 mini-batch
-   - 计算梯度
-   - SGD 更新参数
-   - 记录损失和准确率
-
-3. **关键设计**：
-   - 使用字典存储参数，便于统一管理
-   - 数值梯度用于教学演示，实际应用中使用反向传播更高效
 
 ### 训练技巧总结
 
@@ -1057,3 +1011,34 @@ if __name__ == "__main__":
 3. **正则化技术**：防止过拟合的各种方法
 4. **学习率调度**：动态调整学习率的策略
 5. **分布式训练**：大规模数据的并行训练
+
+### 实践建议
+
+**初学者常见问题及解决方案**：
+
+1. **损失不下降**：
+   - 检查学习率是否合适（建议 0.001-0.1）
+   - 确认梯度计算是否正确
+   - 尝试调整 Batch Size
+
+2. **训练过慢**：
+   - 使用更大的 Batch Size
+   - 考虑使用 GPU 加速
+   - 减小网络规模或减少 Epoch 数
+
+3. **数值不稳定（NaN）**：
+   - 降低学习率
+   - 检查数据是否归一化
+   - 添加梯度裁剪（Gradient Clipping）
+
+4. **记不住概念**：
+   - Epoch = 全部数据过一遍
+   - Batch = 一次更新用多少样本
+   - Iteration = 一个 Epoch 里更新多少次
+   - 关系：Iteration = 样本数 / Batch Size
+
+**动手实践建议**：
+- 修改学习率，观察训练曲线变化
+- 尝试不同的 Batch Size，比较收敛速度
+- 实现梯度检验，确保梯度计算正确
+- 可视化损失曲线，分析训练过程
