feat(optimizer): 添加优化器比较示例代码
- 新增ch05_optim/1_optimiazer_compare.py，比较SGD、Momentum、AdaGrad和Adam四种优化器
- 使用目标函数 f(x,y) = (1/20)x² + y² 及其梯度进行迭代更新
- 记录参数更新轨迹，绘制等高线和点轨迹图形直观展示收敛过程
- 便于理解不同优化算法在参数空间的行为差异与收敛效果

--- a/02_神经网络的学习.md
+++ b/02_神经网络的学习.md
@@ -55,9 +55,9 @@
 
 二分类任务常用二元交叉熵损失函数（Binary Cross-Entropy Loss）。
 
-```
-L = -(1/n) Σᵢ (yᵢ · log(ŷᵢ) + (1-yᵢ) · log(1-ŷᵢ))
-```
+$$
+L = -(1/n) \sum_{i} (y_i \cdot \log(\hat{y}_i) + (1-y_i) \cdot \log(1-\hat{y}_i))
+$$
 
 其中：
 - **yᵢ**：为真实值（通常为 0 或 1）
@@ -67,9 +67,9 @@ L = -(1/n) Σᵢ (yᵢ · log(ŷᵢ) + (1-yᵢ) · log(1-ŷᵢ))
 
 多分类任务常用多类交叉熵损失函数（Categorical Cross-Entropy Loss）。它是对每个类别的预测概率与真实标签之间差异的加权平均。
 
-```
-L = -(1/n) Σᵢ Σc yᵢ,c · log(ŷᵢ,c)
-```
+$$
+L = -(1/n) \sum_{i} \sum_{c} y_{i,c} \cdot \log(\hat{y}_{i,c})
+$$
 
 其中：
 - **n**：样本数量
@@ -109,9 +109,9 @@ def cross_entropy(y, t):
 #### 均方误差（Mean Squared Error, MSE）
 
 **定义**：
-```
-MSE = (1/n) Σᵢ (yᵢ - ŷᵢ)²
-```
+$$
+MSE = (1/n) \sum_{i} (y_i - \hat{y}_i)^2
+$$
 
 其中：
 - yᵢ：真实值
@@ -138,9 +138,9 @@ def mean_square_error(y_true, y_pred):
 #### 平均绝对误差（Mean Absolute Error, MAE）
 
 **定义**：
-```
-MAE = (1/n) Σᵢ |yᵢ - ŷᵢ|
-```
+$$
+MAE = (1/n) \sum_{i} |y_i - \hat{y}_i|
+$$
 
 **特点**：
 - 对离群点更鲁棒
@@ -151,11 +151,12 @@ MAE = (1/n) Σᵢ |yᵢ - ŷᵢ|
 Smooth L1 损失函数结合了 MSE 和 MAE 的优点，在小误差时使用二次函数，在大误差时使用绝对值函数。
 
 **定义**：
-```
-Smooth L1 = 
-    (1/2)(yᵢ - ŷᵢ)²      , 当 |yᵢ - ŷᵢ| < 1
-    |yᵢ - ŷᵢ| - 1/2   , 当 |yᵢ - ŷᵢ| ≥ 1
-```
+$$
+Smooth\ L1 = \begin{cases}
+(1/2)(y_i - \hat{y}_i)^2, & \text{当 } |y_i - \hat{y}_i| < 1 \\
+|y_i - \hat{y}_i| - 1/2, & \text{当 } |y_i - \hat{y}_i| \geq 1
+\end{cases}
+$$
 
 其中：
 - **yᵢ**：真实值
@@ -191,9 +192,9 @@ Smooth L1 =
 **数学定义**：
 导数表示函数在某一点的瞬时变化率：
 
-```
-f'(x) = lim[h→0] (f(x+h) - f(x)) / h
-```
+$$
+f'(x) = \lim_{h \to 0} \frac{f(x+h) - f(x)}{h}
+$$
 
 **直观理解**：
 - **几何意义**：曲线在该点的切线斜率
@@ -215,14 +216,14 @@ f'(x) = lim[h→0] (f(x+h) - f(x)) / h
 由于计算机无法处理无穷小量，我们使用有限差分来近似导数：
 
 **前向差分**：
-```
-f'(x) ≈ (f(x+h) - f(x)) / h
-```
+$$
+f'(x) \approx \frac{f(x+h) - f(x)}{h}
+$$
 
 **中心差分**（推荐，精度更高）：
-```
-f'(x) ≈ (f(x+h) - f(x-h)) / 2h
-```
+$$
+f'(x) \approx \frac{f(x+h) - f(x-h)}{2h}
+$$
 
 **代码实现**（来自 `common/gradient.py`）：
 ```python
@@ -282,17 +283,20 @@ plt.show()
 **定义**：
 对于函数 f(x₁, x₂, ..., xₙ)，关于 xᵢ 的偏导数为：
 
-```
-∂f/∂xᵢ = lim[h→0] (f(x₁,...,xᵢ+h,...,xₙ) - f(x₁,...,xᵢ,...,xₙ)) / h
-```
+$$
+\frac{\partial f}{\partial x_i} = \lim_{h \to 0} \frac{f(x_1,...,x_i+h,...,x_n) - f(x_1,...,x_i,...,x_n)}{h}
+$$
 
 **示例**：
 对于 f(x₀, x₁) = x₀² + x₁²
 
-```
-∂f/∂x₀ = 2x₀
-∂f/∂x₁ = 2x₁
-```
+$$
+\frac{\partial f}{\partial x_0} = 2x_0
+$$
+
+$$
+\frac{\partial f}{\partial x_1} = 2x_1
+$$
 
 **代码实现**（来自 `common/gradient.py`）：
 ```python
@@ -343,9 +347,9 @@ def numerical_gradient(f, X):
 梯度是由所有偏导数组成的向量，指向函数值增加最快的方向。
 
 **定义**：
-```
-∇f = (∂f/∂x₁, ∂f/∂x₂, ..., ∂f/∂xₙ)
-```
+$$
+\nabla f = \left(\frac{\partial f}{\partial x_1}, \frac{\partial f}{\partial x_2}, ..., \frac{\partial f}{\partial x_n}\right)
+$$
 
 **梯度的性质**：
 1. **方向**：指向函数值上升最快的方向
@@ -389,17 +393,14 @@ print(f"梯度大小: {np.linalg.norm(grad):.2f}")  # 输出: 10.00
 我们以一个单层的简单网络为例，形状为 2×3，权重参数为 W，损失函数记为 L。那么它的权重参数和梯度为：
 
 **权重矩阵 W**：
-```
-W = ┌ w₁₁  w₁₂  w₁₃ ┐
-    └ w₂₁  w₂₂  w₂₃ ┘
-```
+$$
+W = \begin{bmatrix} w_{11} & w_{12} & w_{13} \\ w_{21} & w_{22} & w_{23} \end{bmatrix}
+$$
 
 **梯度矩阵 ∂L/∂W**：
-```
-∂L     ┌ ∂L/∂w₁₁  ∂L/∂w₁₂  ∂L/∂w₁₃ ┐
-—— =  └ ∂L/∂w₂₁  ∂L/∂w₂₂  ∂L/∂w₂₃ ┘
-∂W
-```
+$$
+\frac{\partial L}{\partial W} = \begin{bmatrix} \frac{\partial L}{\partial w_{11}} & \frac{\partial L}{\partial w_{12}} & \frac{\partial L}{\partial w_{13}} \\ \frac{\partial L}{\partial w_{21}} & \frac{\partial L}{\partial w_{22}} & \frac{\partial L}{\partial w_{23}} \end{bmatrix}
+$$
 
 **重要说明**：
 - 梯度 ∂L/∂W 也是一个 2×3 的矩阵，与权重矩阵形状相同
@@ -512,9 +513,9 @@ grad[0,0] = (loss1 - loss2) / (2h) = (1.3058 - 1.3062) / 0.0002 = -0.02
 
 用数值梯度验证解析梯度的正确性：
 
-```
-相对误差 = |数值梯度 - 解析梯度| / max(|数值梯度|, |解析梯度|)
-```
+$$
+相对误差 = \frac{|数值梯度 - 解析梯度|}{\max(|数值梯度|, |解析梯度|)}
+$$
 
 **判断标准**：
 - 相对误差 < 1e-7：梯度计算正确
@@ -529,9 +530,9 @@ grad[0,0] = (loss1 - loss2) / (2h) = (1.3058 - 1.3062) / 0.0002 = -0.02
 梯度下降法是最基本的优化算法，通过沿负梯度方向迭代更新参数来最小化损失函数。
 
 **更新公式**：
-```
-θ = θ - η·∇L(θ)
-```
+$$
+\theta = \theta - \eta \cdot \nabla L(\theta)
+$$
 
 其中：
 - θ：模型参数
@@ -646,9 +647,9 @@ if __name__ == '__main__':
 **定义**：一次 Iteration 表示完成一个 Batch 数据的正向传播（预测）和反向传播（更新参数）的过程。
 
 **计算公式**：
-```
-迭代次数 = 训练样本数 / Batch Size
-```
+$$
+迭代次数 = 训练样本数 / Batch\ Size
+$$
 
 **示例**：
 - 数据集现有 2000 个样本，对其训练 10 个 Epoch，选择 Batch Size=64：
@@ -656,10 +657,13 @@ if __name__ == '__main__':
   - **总迭代次数** = 32 × 10 = 320 次
 
 **三者关系总结**：
-```
-1 个 Epoch = (训练样本数 / Batch Size) 个 Iteration
-总 Iteration 数 = Epoch 数 × (训练样本数 / Batch Size)
-```
+$$
+1\ 个\ Epoch = (训练样本数 / Batch\ Size) 个\ Iteration
+$$
+
+$$
+总\ Iteration\ 数 = Epoch\ 数 \times (训练样本数 / Batch\ Size)
+$$
 
 #### 学习率（Learning Rate）
 
