--- a/03_反向传播算法.md
+++ b/03_反向传播算法.md
@@ -102,15 +102,15 @@ z = x * y = 6
 
 **数学定义**：如果函数 y 是 u 的函数，u 是 x 的函数，则 y 关于 x 的导数为：
 
-```
-dy/dx = (dy/du) × (du/dx)
-```
+$$
+\frac{dy}{dx} = \frac{dy}{du} \times \frac{du}{dx}
+$$
 
 **扩展形式**（多层复合）：
 
-```
-dy/dx = (dy/du) × (du/dv) × (dv/dx)
-```
+$$
+\frac{dy}{dx} = \frac{dy}{du} \times \frac{du}{dv} \times \frac{dv}{dx}
+$$
 
 ### 3.2.2 链式法则在神经网络中的应用
 
@@ -124,9 +124,9 @@ dy/dx = (dy/du) × (du/dv) × (dv/dx)
 
 计算 ∂L/∂W₁（损失函数对第一层权重的梯度）：
 
-```
-∂L/∂W₁ = (∂L/∂z₂) × (∂z₂/∂a₁) × (∂a₁/∂z₁) × (∂z₁/∂W₁)
-```
+$$
+\frac{\partial L}{\partial W_1} = \frac{\partial L}{\partial z_2} \times \frac{\partial z_2}{\partial a_1} \times \frac{\partial a_1}{\partial z_1} \times \frac{\partial z_1}{\partial W_1}
+$$
 
 **重要说明**：
 - 链式法则是反向传播算法的数学基础
@@ -142,9 +142,9 @@ dy/dx = (dy/du) × (du/dv) × (dv/dx)
 拆解：`u = x + 1`, `y = u²`
 
 计算导数：
-```
-dy/dx = (dy/du) × (du/dx) = 2u × 1 = 2(x + 1)
-```
+$$
+\frac{dy}{dx} = \frac{dy}{du} \times \frac{du}{dx} = 2u \times 1 = 2(x + 1)
+$$
 
 **示例 2**：多变量复合函数
 
@@ -153,10 +153,13 @@ dy/dx = (dy/du) × (du/dx) = 2u × 1 = 2(x + 1)
 设 `z = x + y`, 则 `L = z²`
 
 计算偏导数：
-```
-∂L/∂x = (∂L/∂z) × (∂z/∂x) = 2z × 1 = 2(x + y)
-∂L/∂y = (∂L/∂z) × (∂z/∂y) = 2z × 1 = 2(x + y)
-```
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial z} \times \frac{\partial z}{\partial x} = 2z \times 1 = 2(x + y)
+$$
+
+$$
+\frac{\partial L}{\partial y} = \frac{\partial L}{\partial z} \times \frac{\partial z}{\partial y} = 2z \times 1 = 2(x + y)
+$$
 
 **关键要点**：
 - 链式法则将复杂的导数计算分解为简单的局部导数乘积
@@ -171,15 +174,18 @@ dy/dx = (dy/du) × (du/dx) = 2u × 1 = 2(x + 1)
 ### 3.3.1 加法节点的反向传播
 
 **正向传播**：
-```
+$$
 z = x + y
-```
+$$
 
 **反向传播**：
-```
-∂L/∂x = ∂L/∂z × ∂z/∂x = ∂L/∂z × 1 = ∂L/∂z
-∂L/∂y = ∂L/∂z × ∂z/∂y = ∂L/∂z × 1 = ∂L/∂z
-```
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial z} \times \frac{\partial z}{\partial x} = \frac{\partial L}{\partial z} \times 1 = \frac{\partial L}{\partial z}
+$$
+
+$$
+\frac{\partial L}{\partial y} = \frac{\partial L}{\partial z} \times \frac{\partial z}{\partial y} = \frac{\partial L}{\partial z} \times 1 = \frac{\partial L}{\partial z}
+$$
 
 **重要特性**：
 - 加法节点的反向传播直接将上游梯度传递给下游
@@ -193,15 +199,18 @@ z = x + y
 ### 3.3.2 乘法节点的反向传播
 
 **正向传播**：
-```
-z = x × y
-```
+$$
+z = x \times y
+$$
 
 **反向传播**：
-```
-∂L/∂x = ∂L/∂z × ∂z/∂x = ∂L/∂z × y
-∂L/∂y = ∂L/∂z × ∂z/∂y = ∂L/∂z × x
-```
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial z} \times \frac{\partial z}{\partial x} = \frac{\partial L}{\partial z} \times y
+$$
+
+$$
+\frac{\partial L}{\partial y} = \frac{\partial L}{\partial z} \times \frac{\partial z}{\partial y} = \frac{\partial L}{\partial z} \times x
+$$
 
 **重要特性**：
 - 乘法节点反向传播时，需要交换输入值
@@ -218,10 +227,13 @@ z = x × y
 已知：x = 2, y = 3, z = 6, ∂L/∂z = 1.5
 
 反向传播：
-```
-∂L/∂x = ∂L/∂z × y = 1.5 × 3 = 4.5
-∂L/∂y = ∂L/∂z × x = 1.5 × 2 = 3.0
-```
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial z} \times y = 1.5 \times 3 = 4.5
+$$
+
+$$
+\frac{\partial L}{\partial y} = \frac{\partial L}{\partial z} \times x = 1.5 \times 2 = 3.0
+$$
 
 ### 3.3.3 梯度传播
 
@@ -235,18 +247,30 @@ z = x × y
 计算图：`x → [×2] → a → [+3] → b → [×5] → y`
 
 正向传播（x = 1）：
-```
-a = x × 2 = 2
+$$
+a = x \times 2 = 2
+$$
+
+$$
 b = a + 3 = 5
-y = b × 5 = 25
-```
+$$
+
+$$
+y = b \times 5 = 25
+$$
 
 反向传播（∂L/∂y = 1）：
-```
-∂L/∂b = ∂L/∂y × ∂y/∂b = 1 × 5 = 5
-∂L/∂a = ∂L/∂b × ∂b/∂a = 5 × 1 = 5
-∂L/∂x = ∂L/∂a × ∂a/∂x = 5 × 2 = 10
-```
+$$
+\frac{\partial L}{\partial b} = \frac{\partial L}{\partial y} \times \frac{\partial y}{\partial b} = 1 \times 5 = 5
+$$
+
+$$
+\frac{\partial L}{\partial a} = \frac{\partial L}{\partial b} \times \frac{\partial b}{\partial a} = 5 \times 1 = 5
+$$
+
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial a} \times \frac{\partial a}{\partial x} = 5 \times 2 = 10
+$$
 
 **重要说明**：
 - 反向传播的顺序与正向传播相反
@@ -266,28 +290,28 @@ y = b × 5 = 25
 ### 3.4.1 ReLU的反向传播
 
 **ReLU 函数定义**：
-```
-ReLU(x) = max(0, x) = {
-    x,  if x > 0
-    0,  if x ≤ 0
-}
-```
+$$
+ReLU(x) = \max(0, x) = \begin{cases}
+x, & \text{if } x > 0 \\
+0, & \text{if } x \leq 0
+\end{cases}
+$$
 
 **ReLU 导数**：
-```
-∂ReLU/∂x = {
-    1,  if x > 0
-    0,  if x ≤ 0
-}
-```
+$$
+\frac{\partial ReLU}{\partial x} = \begin{cases}
+1, & \text{if } x > 0 \\
+0, & \text{if } x \leq 0
+\end{cases}
+$$
 
 **反向传播规则**：
-```
-∂L/∂x = {
-    ∂L/∂y,  if x > 0  (正向传播时 x > 0)
-    0,      if x ≤ 0  (正向传播时 x ≤ 0)
-}
-```
+$$
+\frac{\partial L}{\partial x} = \begin{cases}
+\frac{\partial L}{\partial y}, & \text{if } x > 0 \text{ (正向传播时 } x > 0\text{)} \\
+0, & \text{if } x \leq 0 \text{ (正向传播时 } x \leq 0\text{)}
+\end{cases}
+$$
 
 **直观理解**：
 - 当正向传播时 x > 0，梯度直接传递（乘以1）
@@ -331,23 +355,23 @@ class Relu:
 ### 3.4.2 Sigmoid的反向传播
 
 **Sigmoid 函数定义**：
-```
-σ(x) = 1 / (1 + e⁻ˣ)
-```
+$$
+\sigma(x) = \frac{1}{1 + e^{-x}}
+$$
 
 **Sigmoid 导数**：
-```
-∂σ/∂x = σ(x) × (1 - σ(x))
-```
+$$
+\frac{\partial \sigma}{\partial x} = \sigma(x) \times (1 - \sigma(x))
+$$
 
 **重要性质**：
 - Sigmoid 的导数可以用其输出值表示
 - 无需重新计算指数，效率更高
 
 **反向传播规则**：
-```
-∂L/∂x = ∂L/∂y × ∂y/∂x = ∂L/∂y × y × (1 - y)
-```
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial y} \times \frac{\partial y}{\partial x} = \frac{\partial L}{\partial y} \times y \times (1 - y)
+$$
 
 其中 y = σ(x) 是正向传播的输出。
 
@@ -361,9 +385,9 @@ class Relu:
 正向传播：x = 0, y = σ(0) = 0.5
 
 反向传播（∂L/∂y = 1）：
-```
-∂L/∂x = ∂L/∂y × y × (1 - y) = 1 × 0.5 × 0.5 = 0.25
-```
+$$
+\frac{\partial L}{\partial x} = \frac{\partial L}{\partial y} \times y \times (1 - y) = 1 \times 0.5 \times 0.5 = 0.25
+$$
 
 **实现要点**：
 - 正向传播时保存输出 y
@@ -401,9 +425,9 @@ class Sigmoid:
 **定义**：Affine层（仿射层）是神经网络中的全连接层，执行线性变换。
 
 **数学表达式**：
-```
-Y = X @ W + b
-```
+$$
+Y = X \cdot W + b
+$$
 
 其中：
 - X: 输入矩阵，形状 (batch_size, input_size)
@@ -415,20 +439,38 @@ Y = X @ W + b
 ### 3.5.2 Affine层的正向传播
 
 **单样本情况**：
-```
-输入: x ∈ ℝⁿ
-权重: W ∈ ℝⁿˣᵐ
-偏置: b ∈ ℝᵐ
-输出: y = x @ W + b ∈ ℝᵐ
-```
+$$
+输入: x \in \mathbb{R}^n
+$$
+
+$$
+权重: W \in \mathbb{R}^{n \times m}
+$$
+
+$$
+偏置: b \in \mathbb{R}^m
+$$
+
+$$
+输出: y = x \cdot W + b \in \mathbb{R}^m
+$$
 
 **批量处理情况**：
-```
-输入: X ∈ ℝᴮˣⁿ  (B个样本)
-权重: W ∈ ℝⁿˣᵐ
-偏置: b ∈ ℝᵐ
-输出: Y = X @ W + b ∈ ℝᴮˣᵐ
-```
+$$
+输入: X \in \mathbb{R}^{B \times n} \text{ (B个样本)}
+$$
+
+$$
+权重: W \in \mathbb{R}^{n \times m}
+$$
+
+$$
+偏置: b \in \mathbb{R}^m
+$$
+
+$$
+输出: Y = X \cdot W + b \in \mathbb{R}^{B \times m}
+$$
 
 **广播机制**：
 - 偏置 b 会自动广播到每个样本
@@ -445,11 +487,17 @@ Y = X @ W + b
 
 **矩阵形式的梯度**：
 
-```
-∂L/∂X = ∂L/∂Y @ Wᵀ
-∂L/∂W = Xᵀ @ ∂L/∂Y
-∂L/∂b = sum(∂L/∂Y, axis=0)
-```
+$$
+\frac{\partial L}{\partial X} = \frac{\partial L}{\partial Y} \cdot W^T
+$$
+
+$$
+\frac{\partial L}{\partial W} = X^T \cdot \frac{\partial L}{\partial Y}
+$$
+
+$$
+\frac{\partial L}{\partial b} = \sum\left(\frac{\partial L}{\partial Y}, \text{axis}=0\right)
+$$
 
 **形状分析**：
 
@@ -460,11 +508,17 @@ Y = X @ W + b
 - ∂L/∂Y: (B, m)
 
 则：
-```
-∂L/∂X = ∂L/∂Y @ Wᵀ = (B, m) @ (m, n) = (B, n) ✓
-∂L/∂W = Xᵀ @ ∂L/∂Y = (n, B) @ (B, m) = (n, m) ✓
-∂L/∂b = sum(∂L/∂Y, axis=0) = (m,) ✓
-```
+$$
+\frac{\partial L}{\partial X} = \frac{\partial L}{\partial Y} \cdot W^T = (B, m) \cdot (m, n) = (B, n) \checkmark
+$$
+
+$$
+\frac{\partial L}{\partial W} = X^T \cdot \frac{\partial L}{\partial Y} = (n, B) \cdot (B, m) = (n, m) \checkmark
+$$
+
+$$
+\frac{\partial L}{\partial b} = \sum\left(\frac{\partial L}{\partial Y}, \text{axis}=0\right) = (m,) \checkmark
+$$
 
 **重要说明**：
 - ∂L/∂b 需要对 batch 维度求和，因为每个样本都对 b 有贡献
@@ -488,47 +542,71 @@ Y = X @ W + b
 
 **正向传播示例**：
 
-```
-输入: X = [[1, 2],
-          [3, 4]]  (2×2)
+$$
+输入: X = \begin{bmatrix} 1 & 2 \\ 3 & 4 \end{bmatrix} \quad (2 \times 2)
+$$
 
-权重: W = [[0.5, 0.8],
-          [0.2, 0.3]]  (2×2)
+$$
+权重: W = \begin{bmatrix} 0.5 & 0.8 \\ 0.2 & 0.3 \end{bmatrix} \quad (2 \times 2)
+$$
 
-偏置: b = [0.1, 0.1]  (2,)
+$$
+偏置: b = [0.1, 0.1] \quad (2,)
+$$
 
+$$
 计算:
-Y = X @ W + b
-  = [[1×0.5+2×0.2, 1×0.8+2×0.3],
-     [3×0.5+4×0.2, 3×0.8+4×0.3]] + [[0.1, 0.1],
-                                      [0.1, 0.1]]
-  = [[0.9, 1.5],
-     [2.3, 3.5]]
-```
+$$
+
+$$
+Y = X \cdot W + b
+$$
+
+$$
+= \begin{bmatrix} 1 \times 0.5 + 2 \times 0.2 & 1 \times 0.8 + 2 \times 0.3 \\ 3 \times 0.5 + 4 \times 0.2 & 3 \times 0.8 + 4 \times 0.3 \end{bmatrix} + \begin{bmatrix} 0.1 & 0.1 \\ 0.1 & 0.1 \end{bmatrix}
+$$
+
+$$
+= \begin{bmatrix} 0.9 & 1.5 \\ 2.3 & 3.5 \end{bmatrix}
+$$
 
 **反向传播示例**：
 
-```
-上游梯度: ∂L/∂Y = [[1.0, 1.5],
-                    [2.0, 2.5]]  (2×2)
+$$
+上游梯度: \frac{\partial L}{\partial Y} = \begin{bmatrix} 1.0 & 1.5 \\ 2.0 & 2.5 \end{bmatrix} \quad (2 \times 2)
+$$
 
+$$
 计算:
-∂L/∂X = ∂L/∂Y @ Wᵀ
-      = [[1.0, 1.5],     @ [[0.5, 0.2],
-         [2.0, 2.5]]        [0.8, 0.3]]
-      = [[1.7, 0.65],
-         [3.0, 1.15]]
+$$
 
-∂L/∂W = Xᵀ @ ∂L/∂Y
-      = [[1, 3],         @ [[1.0, 1.5],
-         [2, 4]]            [2.0, 2.5]]
-      = [[7.0, 9.0],
-         [10.0, 13.0]]
+$$
+\frac{\partial L}{\partial X} = \frac{\partial L}{\partial Y} \cdot W^T
+$$
 
-∂L/∂b = sum([[1.0, 1.5],
-            [2.0, 2.5]], axis=0)
-      = [3.0, 4.0]
-```
+$$
+= \begin{bmatrix} 1.0 & 1.5 \\ 2.0 & 2.5 \end{bmatrix} \cdot \begin{bmatrix} 0.5 & 0.2 \\ 0.8 & 0.3 \end{bmatrix}
+$$
+
+$$
+= \begin{bmatrix} 1.7 & 0.65 \\ 3.0 & 1.15 \end{bmatrix}
+$$
+
+$$
+\frac{\partial L}{\partial W} = X^T \cdot \frac{\partial L}{\partial Y}
+$$
+
+$$
+= \begin{bmatrix} 1 & 3 \\ 2 & 4 \end{bmatrix} \cdot \begin{bmatrix} 1.0 & 1.5 \\ 2.0 & 2.5 \end{bmatrix}
+$$
+
+$$
+= \begin{bmatrix} 7.0 & 9.0 \\ 10.0 & 13.0 \end{bmatrix}
+$$
+
+$$
+\frac{\partial L}{\partial b} = \sum\left(\begin{bmatrix} 1.0 & 1.5 \\ 2.0 & 2.5 \end{bmatrix}, \text{axis}=0\right) = [3.0, 4.0]
+$$
 
 **代码实现**（来自 `common/layers.py`）：
 ```python
@@ -633,12 +711,17 @@ class Affine:
 **直观理解**：
 
 假设三分类问题：
-```
-真实标签: t = [0, 1, 0]  (第2类)
-预测概率: y = [0.3, 0.6, 0.1]
+$$
+真实标签: t = [0, 1, 0] \text{ (第2类)}
+$$
 
-梯度: ∂L/∂a = y - t = [0.3, -0.4, 0.1]
-```
+$$
+预测概率: y = [0.3, 0.6, 0.1]
+$$
+
+$$
+梯度: \frac{\partial L}{\partial a} = y - t = [0.3, -0.4, 0.1]
+$$
 
 - 第1类：预测0.3，应该是0，梯度为正，会降低这个输出
 - 第2类：预测0.6，应该是1，梯度为负，会提高这个输出
@@ -662,19 +745,18 @@ T: (batch_size, num_classes)
 
 **对于 Softmax 函数**：
 
-```
-       e^(aₖ)
-yₖ = ───────────    k = 1~n
-      Σᵢ₌₁ e^(aᵢ)
-```
+$$
+y_k = \frac{e^{a_k}}{\sum_{i=1}^{n} e^{a_i}} \quad k = 1 \sim n
+$$
 
 **其导数为**：
 
-```
-∂yₖ     ┌ yₖ(1 - yₖ), k = i
-──── = ┤
-∂xᵢ     └ -yₖyᵢ, k ≠ i
-```
+$$
+\frac{\partial y_k}{\partial x_i} = \begin{cases}
+y_k(1 - y_k), & k = i \\
+-y_k y_i, & k \neq i
+\end{cases}
+$$
 
 **重要说明**：
 - 当 k = i 时（对自身求导）：导数为 yₖ(1 - yₖ)
@@ -693,13 +775,17 @@ yₖ = ───────────    k = 1~n
 
 设 Softmax 输入为 a，输出为 y，损失为 L：
 
-```
-L = -Σᵢ tᵢ log(yᵢ)
-yᵢ = exp(aᵢ) / Σⱼ exp(aⱼ)
+$$
+L = -\sum_i t_i \log(y_i)
+$$
 
-∂L/∂aₖ = ∂L/∂yₖ × ∂yₖ/∂aₖ + Σᵢ≠ₖ ∂L/∂yᵢ × ∂yᵢ/∂aₖ
-       = yₖ - tₖ
-```
+$$
+y_i = \frac{\exp(a_i)}{\sum_j \exp(a_j)}
+$$
+
+$$
+\frac{\partial L}{\partial a_k} = \frac{\partial L}{\partial y_k} \times \frac{\partial y_k}{\partial a_k} + \sum_{i \neq k} \frac{\partial L}{\partial y_i} \times \frac{\partial y_i}{\partial a_k} = y_k - t_k
+$$
 
 （完整推导涉及 Softmax 的雅可比矩阵，此处省略）
 
@@ -1031,9 +1117,9 @@ plt.show()
 **比较方法**：
 
 计算相对误差：
-```
-相对误差 = |数值梯度 - 解析梯度| / (|数值梯度| + |解析梯度|)
-```
+$$
+相对误差 = \frac{|数值梯度 - 解析梯度|}{|数值梯度| + |解析梯度|}
+$$
 
 **判断标准**：
 - 相对误差 < 1e-7: 非常好
